# vantro-flow-backend

./: .env.example  .gitignore  ADVANCED_SECURITY_REPORT.md  AGENTS.md  ALERTING_PLAN.md  ALERTING_RULES.md  AUTH_COOKIE_MIGRATION_PLAN.md  AUTOMATIC_SECRET_ROTATION_DESIGN.md  BACKGROUND_JOBS_PLAN.md  BACKUP_RESTORE_DRILL.md  BACKUP_RESTORE_PLAN.md  CACHE_WARMING_PLAN.md  CLAUDE.md  CROSS_USER_SECURITY_TEST_PLAN.md  Cargo.toml  DATABASE_PERFORMANCE_PLAN.md  DATABASE_SCALING_ROADMAP.md  DATABASE_SECURITY_CHECKLIST.md  DB_CONNECTION_POOLING_PLAN.md  DEPENDENCY_SECURITY_PLAN.md  ERROR_INTELLIGENCE_ROLLOUT.md  FINTECH_SECURITY_REPORT.md  GRAFANA_ALERT_RULES_ERROR_SECURITY.md  GRAFANA_DASHBOARD_PLAN.md  INCIDENT_RESPONSE_PLAYBOOK.md  LOAD_TESTING_PLAN.md  OBSERVABILITY_DEPLOYMENT_PLAN.md  OBSERVABILITY_PLAN.md  OBSERVABILITY_ROLLOUT.md  OBSERVABILITY_SECURITY_PLAN.md  OTEL_TEMPO_PLAN.md  PRODUCTION_RELIABILITY_REPORT.md  PROVIDER_SECRET_ROTATION_GUIDE.md  RAILWAY_ERROR_STORAGE_ACTIVATION.md  RLS_ERROR_EVENTS_STAGING_TEST_PLAN.md  SCALE_READINESS_REPORT.md  SECRET_INVENTORY.md  SECRET_LEAK_RESPONSE_RUNBOOK.md  SECRET_MANAGEMENT_PLAN.md  SECRET_MANAGER_ADAPTER_PLAN.md  (+28 more)
.cargo/: config.toml
.claude/: agent-council.md  agent-router.md  auto-agent-policy.md  escalation-rules.md  preflight.md  risk-matrix.md  settings.json  signal-map.md  speed-tracks.md  task-classifier.md
.sqlx/: query-246919becd309c9da037e3de3f58433c010ae9c15853c1f194527d724554c258.json  query-2640ee55314283c60336cef85e5ad06d0812c25d9f61da8fae7518e7ffef586c.json  query-29b5476739cadb847272b78c9f2a47cb10e7beb720578899e1303129ae987e11.json  query-474f55b8b4ea9dbe6ce93d28e1d71ec5bc25a647c84ae8ec9808c8be751d1747.json  query-9d3dd81466024dde508b0c1c0cced9d504588f37692aef05fe76e1ddfa166f7e.json  query-b4dfd443a2ee127f14ab25a891d2e2d2a5aaf4f384b911a0b8795109e8c68306.json  query-c6df10e65a56466a92d4773f0369180708be22ea5ef7f81438eef72c22ad24d7.json  query-d318a498db96632c2cfdc9c7095ccbec73dcbc948f905c16dd15678cf367b182.json  query-de4f5a5b79d9b0a591fe3099db9f97642a3b136cda6a53cf336a3e8c81d3c803.json  query-edcb54458c3f8cc98677b55e5715003170b3ec55fe6d3f552b3386560bad91db.json
cortex-core-rs/: Cargo.toml
cortex-core-rs/src/: errors.rs  lib.rs  main.rs  policy.rs  scoring.rs  simulation.rs  types.rs
cortex-lab/: .env.test.example  README.md  assertions.js  cleanup.js  config.js  dbClient.js  httpClient.js  reporter.js  run.js  sandboxGuard.js  schemaValidator.js  scorecard.js  seed.js
db/: harness-seed.sql  sqlx-test-schema.sql  supabase-staging-base.sql
docs/: emergency-ledger-forecast-fix.md  node-staging-baseline.md  rust-railway-deploy.md  rust-sqlx-validation.md  rust-staging-live-test.md  rust-staging-soak-log.md  rust-staging-soak.md  vantro-war-room-plan.md
lib/: businessContext.js  featureFlags.js
migrations/: 001_cortex_foundation.sql  002_cortex_extension.sql  003_evaluation.sql  004_schema_repair.sql  005_cortex_x_extensions.sql  006_cortex_rls.sql  007_agent_registry.sql
performance-lab/: config.js  httpClient.js  report.md  reporter.js  run.js
scratch/: fix_injection.js  fix_injection2.js  getToken.js  patch_bootstrap.js  (+6 more)
vantro-automation-rs/: Cargo.toml  nixpacks.toml  railway.toml
vantro-automation-rs/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  telemetry.rs
vantro-automation-rs/src/agents/: mod.rs  registry.rs  types.rs
vantro-automation-rs/src/agents/cost_router/: mod.rs
vantro-automation-rs/src/agents/data_quality/: mod.rs
vantro-automation-rs/src/agents/owner_briefing/: core_owner_briefing.rs  mod.rs
vantro-automation-rs/src/agents/policy_guard/: mod.rs
vantro-automation-rs/src/api/: bootstrap.rs  cost.rs  cost_router.rs  data_quality.rs  health.rs  mod.rs  owner_briefing.rs  policy.rs  policy_guard.rs  scoring.rs  simulate.rs
vantro-automation-rs/src/cache/: keys.rs  memory.rs  mod.rs
vantro-automation-rs/src/cashops/: collection_priority.rs  credit_control.rs  mod.rs  payment_behavior.rs  timing_engine.rs  tone_engine.rs
vantro-automation-rs/src/cortex/: action_engine.rs  cost_engine.rs  mod.rs  policy_guard.rs  scoring.rs  simulator.rs
vantro-automation-rs/src/db/: pool.rs  queries.rs
vantro-automation-rs/src/events/: mod.rs  publisher.rs  types.rs
vantro-automation-rs/src/harness/: assertions.rs  mod.rs
vantro-automation-rs/tests/: auth_cache_isolation.rs  policy_guard_fir_regression.rs
(+391 files in other folders)
